--- a/PerformanceTweaker/PerformanceTweaker.csproj
+++ b/PerformanceTweaker/PerformanceTweaker.csproj
@@ -72,6 +72,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Patch\MyLargeTurretBasePatch.cs" />
     <Compile Include="TweakerConfig.cs" />
     <Compile Include="TweakerControl.xaml.cs">
       <DependentUpon>TweakerControl.xaml</DependentUpon>
@@ -79,7 +80,6 @@
     <Compile Include="TweakerManager.cs" />
     <Compile Include="TweakerPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TweakerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="TweakerControl.xaml">
